fix(extensions): Replace deprecated URL(String) constructor with URI.create().toURL()